Ensure tasks are sorted into open and completed